upload initial plugin

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,19 @@
 {
-    "version": "",
-    "thumbnail": "",
-    "id": "",
-    "name": ""
+    "version": "0.1.0",
+    "thumbnail": "store/Thumbnail.png",
+    "id": "scientificpsycho_WriteTextPlugin",
+    "name": "Write Text Standalone",
+    "descriptions": {
+        "en_US": "Insert any Text"
+    },
+    "short-descriptions": {
+        "en_US": "Insert Any Text"
+    },
+    "tags": ["Utility"],
+    "minimum-app-version": "1.0.0",
+    "app-version": "1.4.11-beta",
+
+    
+    "description": "Insert Any Text",
+    "short-description": "Insert Any Text"
 }
